force-app/main/default/objects/User/fields/Rebate_Approval_Manager__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Approval_Manager__c</fullName>
    <description>Defines who is responsible for approving any Rebates submitted by this User.</description>
    <inlineHelpText>Defines who is responsible for approving any Rebates submitted by this User.</inlineHelpText>
    <label>Rebate Approval Manager</label>
    <relationshipName>x1</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>