force-app/main/default/objects/User/fields/Sales_Organisation_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Organisation_Name__c</fullName>
    <description>used for formulas</description>
    <label>Sales Organisation Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sales_Organisation_Name</valueSetName>
    </valueSet>
</CustomField>