force-app/main/default/objects/User/fields/Sales_Organisation_SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>Sales_Organisation_SAP_Code__c</fullName>
    <inlineHelpText>Required for formulas on records</inlineHelpText>
    <label>Sales Organisation SAP Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sales_Organization</valueSetName>
    </valueSet>
</CustomField>