force-app/main/default/objects/User/fields/SAP_UserNumber__c.field-meta.xml
<CustomField>
    <fullName>SAP_UserNumber__c</fullName>
    <externalId>true</externalId>
    <label>SAP User Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>