force-app/main/default/objects/User/listViews/UK_Users.listView-meta.xml
<ListView>
    <fullName>UK_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.CELL</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Organisation_SAP_Code__c</field>
        <operation>equals</operation>
        <value>EN60</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>UK Users (Active)</label>
    <language>en_US</language>
</ListView>