force-app/main/default/objects/User/listViews/Vidrala_Users.listView-meta.xml
<ListView>
    <fullName>Vidrala_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.CELL</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Organisation_Name__c</field>
        <operation>equals</operation>
        <value>FIFTY,Vidrala France,Vidrala</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notEqual</operation>
        <value>Chatter Free User</value>
    </filters>
    <label>Vidrala Users (Active)</label>
    <language>en_US</language>
</ListView>